# TopframeworkNEW

./: .gitignore  AGENTS.md  Application_temp.cpp  CMakeLists.txt  CMakePresets.json  README.md  auto-commit.ps1  git-setup.ps1
.claude/: settings.local.json
.claude/projects/: MEMORY.md  TopOptFrame-splitters.md
model/: Kitten.stl  spheres.stl
src/: main.cpp
src/app/: Application.cpp  Application.h
src/commands/: Command.cpp  Command.h  NodeCommands.cpp  NodeCommands.h
src/execution/: GraphExecutor.cpp  GraphExecutor.h  NodeData.h
src/fem/: FEMSolver.cpp  FEMSolver.h  TopOptSolver.cpp  TopOptSolver.h
src/node_editor/: Node.cpp  Node.h  NodeEditor.cpp  NodeEditor.h  NodeRegistry.cpp  NodeRegistry.h
src/panels/: LogPanel.cpp  LogPanel.h  ModulePanel.cpp  ModulePanel.h  NodeListPanel.cpp  NodeListPanel.h  PropertyPanel.cpp  PropertyPanel.h  View3DPanel.cpp  View3DPanel.h
src/serialization/: ProjectSerializer.cpp  ProjectSerializer.h
src/utils/: FileDialog.cpp  FileDialog.h  Logger.h
